; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_mutation.c_get_context_from_document.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_mutation.c_get_context_from_document.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IID_nsIDocument = common dso_local global i32 0, align 4
@NS_OK = common dso_local global i64 0, align 8
@content_utils = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"ret %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @get_context_from_document(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = bitcast i32** %3 to i8**
  %8 = call i64 @nsIDOMHTMLDocument_QueryInterface(i32* %6, i32* @IID_nsIDocument, i8** %7)
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @NS_OK, align 8
  %11 = icmp eq i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i32, i32* @content_utils, align 4
  %15 = load i32*, i32** %3, align 8
  %16 = call i32* @nsIContentUtils_GetContextFromDocument(i32 %14, i32* %15)
  store i32* %16, i32** %4, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @nsIDocument_Release(i32* %17)
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @TRACE(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* %19)
  %21 = load i32*, i32** %4, align 8
  ret i32* %21
}

declare dso_local i64 @nsIDOMHTMLDocument_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @nsIContentUtils_GetContextFromDocument(i32, i32*) #1

declare dso_local i32 @nsIDocument_Release(i32*) #1

declare dso_local i32 @TRACE(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
